# liberty-app

./: .env  .eslintrc.cjs  .gitignore  .prettierrc.yaml  README.md  Taskfile.yml  dev-app-update.yml  electron-builder.yml  electron.vite.config.d.ts  electron.vite.config.js  electron.vite.config.ts  ormconfig.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test.txt  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.cursor/rules/: liberty-project-architecture.md
database/: liberty-database.sqlite
database/factories/: author.factory.ts
database/migrations/: .gitkeep  1734710400000-AddSearchIndexes.ts
database/seeds/: author.seed.ts  book.seed.ts
docs/: WASM-READER-API.md  WASM-READER-ARCHITECTURE.md  WASM-READER-DEVELOPMENT.md  WASM-READER-INTERNALS.md  WASM-READER-SETUP.md
docs/release/: RELEASE-LINUX.md  RELEASE-MACOS.md  RELEASE-OVERVIEW.md  (+1 more)
prisma/: schema.prisma
src/renderer/src/wasm-reader/: .gitignore  Cargo.toml  README.md
src/renderer/src/wasm-reader/.cargo/: config.toml
src/renderer/src/wasm-reader/src/: error.rs  lib.rs  selection.rs  settings.rs
src/renderer/src/wasm-reader/src/fonts/: loader.rs  metrics.rs  mod.rs
src/renderer/src/wasm-reader/src/layout/: document.rs  html_parser.rs  mod.rs
src/renderer/src/wasm-reader/src/pagination/: mod.rs  paginator.rs
src/renderer/src/wasm-reader/src/render/: canvas.rs  mod.rs  text.rs
types/: books.types.ts  collections.types.ts  loader.types.ts  parsed.types.ts  reader.types.ts  router.types.ts  search.types.ts  settings.types.d.ts  settings.types.ts
(+177 files in other folders)
