[package]
name = "liberty-reader"
version = "0.1.0"
edition = "2021"
authors = ["Liberty App"]
description = "WASM-based e-book reader with deterministic text layout"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }

# Text shaping and layout
cosmic-text = "0.12"
fontdue = "0.9"

# HTML parsing
scraper = "0.19"
ego-tree = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Error handling
thiserror = "1.0"

# Hyphenation
hyphenation = { version = "0.8", features = ["embed_en-us"] }

# WASM support for random number generation (required by cosmic-text)
getrandom = { version = "0.3", features = ["wasm_js"] }

# Console error panic hook for better error messages in browser
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true

